PEC 1: Fix alignment of nav bar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -331,6 +331,7 @@ h1 {
       display: flex;
       flex: 0;
       border-top: none;
+      padding-top: 0
     }
   }
 
@@ -370,6 +371,7 @@ h1 {
       display: flex;
       flex: 0;
       border-top: none;
+      padding-top: 0px;
     }
   }
 
